# pytorch-playground

./: .gitignore  main.py  pyproject.toml
src/: i-a-tensor-basics.py  i-b-dataset-dataloader-basics.py  i-c-transformers-basics.py  i-linear-regression.py  i-pytorch-basics.py  i-pytorch-intro.py  i-tensor-basics.py  ii-b-ann-regression.py  ii-simple-neural-network.py  iii-linear-regression.py  iii-multiclass-classification.py  iv-logistic-regression.py  iv-multiclass-classification.py  v-brain-tumor-classification.py  v-mnist-dataset.py
